Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9997

Suspicious assert check in ldlm_cli_cancel

XMLWordPrintable

    • 3
    • 9223372036854775807

      The assert in ldlm_cli_cancel() seems to be problematic:

              /* Even if the lock is marked as LDLM_FL_BL_AST, this is a LDLM_CANCEL  
               * RPC which goes to canceld portal, so we can cancel other LRU locks   
               * here and send them all as one LDLM_CANCEL RPC. */                    
              LASSERT(list_empty(&lock->l_bl_ast));                                   
              list_add(&lock->l_bl_ast, &cancels);  
      

      because the lock may have been picked up LRU and added into canceling list.

            jay Jinshan Xiong (Inactive)
            jay Jinshan Xiong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: