lustre/ldlm/ldlm_request.c
@@ -1371,8 +1371,15 @@ int ldlm_cli_cancel(const struct lustre_handle *lockh,
 
 	lock_res_and_lock(lock);
 	/* Lock is being canceled and the caller doesn't want to wait */
-	if (ldlm_is_canceling(lock) && (cancel_flags & LCF_ASYNC)) {
-		unlock_res_and_lock(lock);
+	if (ldlm_is_canceling(lock)) {
+		if (cancel_flags & LCF_ASYNC) {
+			unlock_res_and_lock(lock);
+		} else {
+			struct l_wait_info lwi = { 0 };
+
+			unlock_res_and_lock(lock);
+			l_wait_event(lock->l_waitq, is_bl_done(lock), &lwi);
+		}
 		LDLM_LOCK_RELEASE(lock);
 		RETURN(0);
 	}
